static/style.css
.draggable {
  cursor: move;
  /* fallback if grab cursor is unsupported */
  cursor: grab;
  cursor: -webkit-grab;
}

.non-selectable {
  cursor: pointer;
}

.proof-container {
  display: flex;
  flex-direction: row;
  height: fit-content;
}

.line-no-container {
  display: flex;
  flex-direction: column;
}

.line-no {
  padding: 0;
  margin: 0;
  height: 1.3rem;
}

.empty-rule {
  padding: 0;
  margin: 0;
  height: 1.3rem;
}

.formula-input {
  border: none;
  width: 100%;
  padding: 0;
  margin: 0;
}

.formula-container {
  display: flex;
  flex-direction: row;
  position: relative;
  height: 100%;
  width: 100%;
  padding: 0;
  margin: 0;
}

.rule-input {
  border: none;
  width: 100%;
  padding: 0;
  margin: 0;
}

.rule-container {
  width: 5rem;
  padding: 0;
  margin: 0;
  position: relative;
}

.fitch-container {
  display: inline-flex;
}

.proof-line {
  position: relative;
  max-width: 15rem;
  height: 1.3rem;
  box-sizing: border-box;
}

.no-pointer-events {
  pointer-events: none;
}

.can-hover:hover {
  /* TODO translateX hides the absolute child. */
  /* transform: translateX(2px); */
  box-shadow: 0 6px 14px rgba(0, 0, 0, 0.12);
}

.button-container {
  display: flex;
  flex-direction: column;
  font-size: 8px;
}

.button-container>div {
  margin-right: 15px;
  margin-bottom: 5px;
  max-width: 6rem;
  border-radius: 50%;
  text-align: center;
  vertical-align: center;
}

.bin {
  background-color: aquamarine;
}

.spawn-button {
  background-color: orange;
}

.upper-hover-zone {
  position: absolute;
  height: 50%;
  width: 100%;
  z-index: 101;
}

.lower-hover-zone {
  position: absolute;
  top: 50%;
  height: 50%;
  width: 100%;
  z-index: 101;
}

.insert-before {
  border-top: 3px solid red;
  box-sizing: border-box;
}

.insert-after {
  border-bottom: 3px solid red;
  box-sizing: border-box;
}

.outer-subproof {
  position: relative;
  box-sizing: border-box;
  border-left: 3px solid black;
  margin-left: 5px;
}

.subproof {
  position: relative;
  box-sizing: border-box;
  border-left: 3px solid black;
  margin-left: 5px;
}

.subproof:not(:has(.subproof:hover, .proof-line:hover)):hover {
  border-left: 5px solid black;
  transition: .1s linear;
  cursor: move;
  /* fallback if grab cursor is unsupported */
  cursor: grab;
  cursor: -webkit-grab;
  transform: translateY(-1px);
  box-shadow: 0 6px 14px rgba(0, 0, 0, 0.12);
}

.last-assumption {
  border-bottom: 3px solid black;
}

.proof-view {
  display: grid;
}

.parse-success {
  color: green;
}

.parse-fail {
  color: red;
}

/* TODO when dragging dont show hover */

.error {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: 100%;
  font-size: 6px;
  border: 1px solid;
  border-radius: 2px;
  width: fit-content;
  padding: 3px;
  white-space: pre;
  background: #fff;
  color: #000;
  z-index: 110;
  transition: visibility 0s, opacity .5s;
}

.has-error:hover .error {
  visibility: visible;
  opacity: 1;
}

